seaqt/QtWidgets/gen_qtableview.nim

proc fcQTableView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setupViewport".}
proc fQTableView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_wheelEvent".}
proc fcQTableView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_wheelEvent".}
proc fQTableView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_contextMenuEvent".}
proc fcQTableView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_contextMenuEvent".}
proc fQTableView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTableView_virtualbase_changeEvent".}
proc fcQTableView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_changeEvent".}
proc fQTableView_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QTableView_virtualbase_initStyleOption".}
proc fcQTableView_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QTableView_override_virtual_initStyleOption".}
proc fQTableView_virtualbase_devType(self: pointer, ): cint{.importc: "QTableView_virtualbase_devType".}
proc fcQTableView_override_virtual_devType(self: pointer, slot: int) {.importc: "QTableView_override_virtual_devType".}
proc fQTableView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTableView_virtualbase_setVisible".}
proc fcQTableView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTableView_override_virtual_setVisible".}
proc fQTableView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTableView_virtualbase_heightForWidth".}
proc fcQTableView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTableView_override_virtual_heightForWidth".}
proc fQTableView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTableView_virtualbase_hasHeightForWidth".}
proc fcQTableView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTableView_override_virtual_hasHeightForWidth".}
proc fQTableView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTableView_virtualbase_paintEngine".}
proc fcQTableView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTableView_override_virtual_paintEngine".}
proc fQTableView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_keyReleaseEvent".}
proc fcQTableView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_keyReleaseEvent".}
proc fQTableView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_enterEvent".}
proc fcQTableView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_enterEvent".}
proc fQTableView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_leaveEvent".}
proc fcQTableView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_leaveEvent".}
proc fQTableView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_moveEvent".}
proc fcQTableView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_moveEvent".}
proc fQTableView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_closeEvent".}
proc fcQTableView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_closeEvent".}
proc fQTableView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_tabletEvent".}
proc fcQTableView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_tabletEvent".}
proc fQTableView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_actionEvent".}
proc fcQTableView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_actionEvent".}
proc fQTableView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_showEvent".}
proc fcQTableView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_showEvent".}
proc fQTableView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_hideEvent".}
proc fcQTableView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_hideEvent".}
proc fQTableView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QTableView_virtualbase_nativeEvent".}
proc fcQTableView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_nativeEvent".}
proc fQTableView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTableView_virtualbase_metric".}
proc fcQTableView_override_virtual_metric(self: pointer, slot: int) {.importc: "QTableView_override_virtual_metric".}
proc fQTableView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTableView_virtualbase_initPainter".}
proc fcQTableView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTableView_override_virtual_initPainter".}
proc fQTableView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTableView_virtualbase_redirected".}
proc fcQTableView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTableView_override_virtual_redirected".}
proc fQTableView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTableView_virtualbase_sharedPainter".}
proc fcQTableView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTableView_override_virtual_sharedPainter".}
proc fQTableView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_childEvent".}
proc fcQTableView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_childEvent".}
proc fQTableView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTableView_virtualbase_customEvent".}
proc fcQTableView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTableView_override_virtual_customEvent".}
proc fQTableView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTableView_virtualbase_connectNotify".}
proc fcQTableView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTableView_override_virtual_connectNotify".}
proc fQTableView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTableView_virtualbase_disconnectNotify".}
proc fcQTableView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTableView_override_virtual_disconnectNotify".}
proc fcQTableView_staticMetaObject(): pointer {.importc: "QTableView_staticMetaObject".}
proc fcQTableView_delete(self: pointer) {.importc: "QTableView_delete".}


func init*(T: type gen_qtableview_types.QTableView, h: ptr cQTableView): gen_qtableview_types.QTableView =
  T(h: h)
proc create*(T: type gen_qtableview_types.QTableView, parent: gen_qwidget_types.QWidget): gen_qtableview_types.QTableView =
  gen_qtableview_types.QTableView.init(fcQTableView_new(parent.h))

proc create*(T: type gen_qtableview_types.QTableView, ): gen_qtableview_types.QTableView =
  gen_qtableview_types.QTableView.init(fcQTableView_new2())

proc metaObject*(self: gen_qtableview_types.QTableView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQTableView_metaObject(self.h))

proc metacast*(self: gen_qtableview_types.QTableView, param1: cstring): pointer =
  fcQTableView_metacast(self.h, param1)

proc metacall*(self: gen_qtableview_types.QTableView, param1: cint, param2: cint, param3: pointer): cint =
  fcQTableView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qtableview_types.QTableView, s: cstring): string =
  let v_ms = fcQTableView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: gen_qtableview_types.QTableView, model: gen_qabstractitemmodel_types.QAbstractItemModel): void =
  fcQTableView_setModel(self.h, model.h)

proc setRootIndex*(self: gen_qtableview_types.QTableView, index: gen_qabstractitemmodel_types.QModelIndex): void =
  fcQTableView_setRootIndex(self.h, index.h)

proc setSelectionModel*(self: gen_qtableview_types.QTableView, selectionModel: gen_qitemselectionmodel_types.QItemSelectionModel): void =
  fcQTableView_setSelectionModel(self.h, selectionModel.h)

proc doItemsLayout*(self: gen_qtableview_types.QTableView, ): void =
  fcQTableView_doItemsLayout(self.h)

proc horizontalHeader*(self: gen_qtableview_types.QTableView, ): gen_qheaderview_types.QHeaderView =
  gen_qheaderview_types.QHeaderView(h: fcQTableView_horizontalHeader(self.h))

proc verticalHeader*(self: gen_qtableview_types.QTableView, ): gen_qheaderview_types.QHeaderView =
  gen_qheaderview_types.QHeaderView(h: fcQTableView_verticalHeader(self.h))

proc setHorizontalHeader*(self: gen_qtableview_types.QTableView, header: gen_qheaderview_types.QHeaderView): void =
  fcQTableView_setHorizontalHeader(self.h, header.h)

proc setVerticalHeader*(self: gen_qtableview_types.QTableView, header: gen_qheaderview_types.QHeaderView): void =
  fcQTableView_setVerticalHeader(self.h, header.h)

proc rowViewportPosition*(self: gen_qtableview_types.QTableView, row: cint): cint =
  fcQTableView_rowViewportPosition(self.h, row)

proc rowAt*(self: gen_qtableview_types.QTableView, y: cint): cint =
  fcQTableView_rowAt(self.h, y)

proc setRowHeight*(self: gen_qtableview_types.QTableView, row: cint, height: cint): void =
  fcQTableView_setRowHeight(self.h, row, height)

proc rowHeight*(self: gen_qtableview_types.QTableView, row: cint): cint =
  fcQTableView_rowHeight(self.h, row)

proc columnViewportPosition*(self: gen_qtableview_types.QTableView, column: cint): cint =
  fcQTableView_columnViewportPosition(self.h, column)

proc columnAt*(self: gen_qtableview_types.QTableView, x: cint): cint =
  fcQTableView_columnAt(self.h, x)

proc setColumnWidth*(self: gen_qtableview_types.QTableView, column: cint, width: cint): void =
  fcQTableView_setColumnWidth(self.h, column, width)

proc columnWidth*(self: gen_qtableview_types.QTableView, column: cint): cint =
  fcQTableView_columnWidth(self.h, column)

proc isRowHidden*(self: gen_qtableview_types.QTableView, row: cint): bool =
  fcQTableView_isRowHidden(self.h, row)

proc setRowHidden*(self: gen_qtableview_types.QTableView, row: cint, hide: bool): void =
  fcQTableView_setRowHidden(self.h, row, hide)

proc isColumnHidden*(self: gen_qtableview_types.QTableView, column: cint): bool =
  fcQTableView_isColumnHidden(self.h, column)

proc setColumnHidden*(self: gen_qtableview_types.QTableView, column: cint, hide: bool): void =
  fcQTableView_setColumnHidden(self.h, column, hide)

proc setSortingEnabled*(self: gen_qtableview_types.QTableView, enable: bool): void =
  fcQTableView_setSortingEnabled(self.h, enable)

proc isSortingEnabled*(self: gen_qtableview_types.QTableView, ): bool =
  fcQTableView_isSortingEnabled(self.h)

proc showGrid*(self: gen_qtableview_types.QTableView, ): bool =
  fcQTableView_showGrid(self.h)

proc gridStyle*(self: gen_qtableview_types.QTableView, ): cint =
  cint(fcQTableView_gridStyle(self.h))

proc setGridStyle*(self: gen_qtableview_types.QTableView, style: cint): void =
  fcQTableView_setGridStyle(self.h, cint(style))

proc setWordWrap*(self: gen_qtableview_types.QTableView, on: bool): void =
  fcQTableView_setWordWrap(self.h, on)
